<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Eat_us_app</string>
    <string name="fridge_main">나의 냉장고</string>
    <string name="freezer_main">나의 냉동고</string>
    <string name="save_btn">저장</string>
    <string name="addfridge_btn">냉장고재료추가</string>
    <string name="vdate_btn">날짜 설정</string>
    <string name="category_btn">카테고리 바로가기</string>
    <string name="fish">생선</string>
    <string name="nuts">견과류</string>
    <string name="fruit">과일</string>
    <string name="sauce">소스류</string>
    <string name="egg">계란</string>
    <string name="grain">곡류</string>
    <string name="drink">음료수</string>
    <string name="veggie">야채류</string>
    <string name="meat">육류</string>
    <string name="alcohol">주류</string>
    <string name="milk">우유</string>
    <string name="cheese" >치즈</string>
    <string name="oil" >오일</string>
    <string name="name">이름</string>
    <string name="nameinput">식료품이름</string>
    <string name="category">카테고리</string>
    <string name="num">수량</string>
    <string name="vdate">유통기한</string>
    <string name="memo">메모</string>
    <string name="default_notification_channel_id" translatable="false">default_channel_id</string>
</resources>